--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboard" >Dashboard</a>
-      <a mat-list-item routerLink="/form">Form</a>
+      <a mat-list-item routerLink="/dialog" >Dialog</a>
       <a mat-list-item >Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
@@ -20,7 +20,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>actividad-24</span>
+      <span>ACTIVIDAD-24</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
