working in styles

--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,7 +1,8 @@
 <ol>
     <li>
       <mat-form-field>
-        <input matInput [(ngModel)]="nombre" placeholder="Cuál es tu nombre?">
+        <mat-label>Cuál es tu nombre?</mat-label>
+        <input matInput [(ngModel)]="nombre">
       </mat-form-field>
     </li>
     <li>
