--- a/src/app/components/example-dialog/example-dialog.component.html
+++ b/src/app/components/example-dialog/example-dialog.component.html
@@ -1,3 +1,4 @@
+<section>
 <h1 mat-dialog-title>Hi {{data.nombre}}</h1>
 <div mat-dialog-content>
   <p>Cuál es tu deporte favorito?</p>
@@ -6,6 +7,7 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button [mat-dialog-close]="data.deporte" cdkFocusInitial>Ok</button>
+  <button mat-button color="warn" (click)="onNoClick()">Cancelar</button>
+  <button mat-button color="primary" [mat-dialog-close]="data.deporte" cdkFocusInitial>Ok</button>
 </div>
+</section>
