--- a/src/app/components/example-dialog/example-dialog.component.html
+++ b/src/app/components/example-dialog/example-dialog.component.html
@@ -1,4 +1,4 @@
-<section>
+<section >
 <h1 mat-dialog-title>Hi {{data.nombre}}</h1>
 <div mat-dialog-content>
   <p>Cuál es tu deporte favorito?</p>
@@ -6,7 +6,7 @@
     <input matInput [(ngModel)]="data.deporte">
   </mat-form-field>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions class="mt-4">
   <button mat-button color="warn" (click)="onNoClick()">Cancelar</button>
   <button mat-button color="primary" [mat-dialog-close]="data.deporte" cdkFocusInitial>Ok</button>
 </div>
