--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,35 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>
+          <div>
+                <!--card-->
+                <mat-card class="example-card pb-3">
+                  <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title>SESIÓN 24</mat-card-title>
+                    <mat-card-subtitle>By NajhelyBS</mat-card-subtitle>
+                  </mat-card-header>
+                  <img mat-card-image src="https://i.pinimg.com/originals/af/80/39/af8039261a387be71514bb4c2e5e54b5.gif" alt="gif">
+                  <mat-card-content>
+                    <p class="mt-3">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id inventore necessitatibus ab similique ratione quo tempore
+                      vero qui nisi sed cumque, repellat laudantium ducimus veniam architecto beatae nobis quas odit?
+                    </p>
+                  </mat-card-content>
+                  <mat-card-actions class="mt-3 d-flex justify-content-center">
+                      <button mat-fab extended color="warn">
+                          <mat-icon>favorite</mat-icon>
+                          Me gusta
+                        </button>             
+                        <button mat-fab extended color="primary" style="margin-left: 5px;">
+                          <mat-icon>share</mat-icon>
+                          Compartir
+                        </button>                
+                  </mat-card-actions>
+                </mat-card>
+<!--card-->
+
+          </div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
